fix: Fix web UI responsive layout on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -546,3 +546,4 @@ body {
 
 /* Updated: 2026-01-03 */
 .updated-372 { opacity: 1; }
+.updated-200 { opacity: 1; }
